--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -186,55 +186,52 @@
 
   /* SERVICIO MOBILE */
 
-  @media all and (max-width: 769px){
+  @media all and (max-width: 469px){
   
-    .serviciosContainer{
-        margin-top: 140px;
-        height: 100vh;
-    }
+   
 
     .serviciosContainerItem{
         position: relative;
-        height: 900px;
+        
         width: 100%;   
     }
     
     .serviciosContainerItem1{
         position: absolute;
         top: 0; 
-        right: 25%;
+        right: 0;
         height: 200px;
-        width: 400px;
+        width: 100%;
         background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
         background-position: center;
     }
     
     .serviciosContainerItem2{
         position: absolute;
-        right: 25%;
+        right: 0%;
         top: 25%;
         height: 200px;
-        width: 400px;
+        width: 100%;
         background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
         background-position: center;
     }
     
     .serviciosContainerItem3{
         position: absolute;
-        left: 23%;
+        left: 0%;
         top: 50%;
         height: 200px;
-        width: 400px;
+        width: 100%;
         background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
         background-position: center;
     }
     
     .serviciosContainerItem4{
         position: absolute;
-        left: 23%;
+        left: 0%;
         top: 75%;
         height: 200px;
-        width: 400px;
+        width: 100%;
         background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
         background-position: center;
     }
