--- a/src/containers/SobreNosotros/sobrenosotros.css
+++ b/src/containers/SobreNosotros/sobrenosotros.css
@@ -285,10 +285,266 @@
 
 /* NOSOTROS TABLET */
 
-@media all and (max-width: 1600px){
+@media all and (max-width: 769px){
+
+    .imgFondo1 {
+        height: 200px;
+        position: absolute;
+        right: 60%;
+        bottom: 10%;
+    }
 
 
+    .imgFondo2 {
+        height: 500px;
+        position: absolute;
+        left: 60%;
+        bottom: 0%;
+    }
+    
+    .tituloSobreNosotros{
+        position: absolute;
+        left: 11%;
+        top: 35%;
+    }
+
+    .tituloSobreNosotros h1{
+        font-size: 1.3rem;
+        width: 600px;
+    }
+
+    .textosMotivacionalesSNContainer{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: auto;
+        height: 20vh;
+        width: 80%;
+    }
+    
+    .textosMotivacionalesSNContainer h1{
+        font-family: 'Reservation';
+        font-size: .9rem;
+    }
+
+    .historiaSN1{
+        height: 1200px;
+        width: 90%;
+        position: relative;
+    }
+    
+    .historiaSN1 p{
+        font-size: 1rem;
+        padding: 1rem;
+    }
+    
+    .historiaSN1Item1{
+        position: absolute;
+        left: 20%;
+        bottom: 90%;
+        font-size: 3em;
+    }
+    
+    .historiaSN1Item2{
+        position: absolute;
+        left: 0%;
+        bottom: 40%;
+    }
+    
+    .historiaSN1Item3{
+        position: absolute; 
+        right: 30%;
+        bottom: 30%; 
+        width: 500px; 
+        height: 700px;
+        z-index: 10;
+    }
+    
+    .historiaSN1Item4{
+        position: absolute;
+        left: 60%;
+        bottom: 0%;
+        z-index: 0;
+    }
+    
+    .imgCeles1{
+        height: 500px;
+        position: absolute;
+    }
+    
+    .imgCeles2{
+        position: absolute;
+        height: 700px;
+        clip-path: inset(150px 0 200px 0);
+    }
+
+    .historiaSN2{
+        width: 90%; 
+        height: 1200px;
+        position: relative;
+        left: 5%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .historiaSN2 img{
+        height: 600px;
+        clip-path: inset(100px 0 100px 0);
+    }
+    
+    .historiaSN2 P{
+        font-size: 1.5rem;
+    }
+
+    .cardsStaffContainer{
+        width: 100%;
+        margin-top: 100px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .cardsStaff{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;  
+        margin-top: 6rem;
+    }
 
 }
 
 /* FIN NOSOTROS TABLET */
+
+/* NOSOTROS MOBILE */
+
+@media all and (max-width: 769px){
+
+    .imgFondo1 {
+        height: 200px;
+        position: absolute;
+        right: 60%;
+        bottom: 10%;
+    }
+
+
+    .imgFondo2 {
+        height: 500px;
+        position: absolute;
+        left: 60%;
+        bottom: 0%;
+    }
+    
+    .tituloSobreNosotros{
+        position: absolute;
+        left: 11%;
+        top: 35%;
+    }
+
+    .tituloSobreNosotros h1{
+        font-size: 1.3rem;
+        width: 600px;
+    }
+
+    .textosMotivacionalesSNContainer{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin: auto;
+        height: 20vh;
+        width: 80%;
+    }
+    
+    .textosMotivacionalesSNContainer h1{
+        font-family: 'Reservation';
+        font-size: .9rem;
+    }
+
+    .historiaSN1{
+        height: 1200px;
+        width: 90%;
+        position: relative;
+    }
+    
+    .historiaSN1 p{
+        font-size: 1rem;
+        padding: 1rem;
+    }
+    
+    .historiaSN1Item1{
+        position: absolute;
+        left: 20%;
+        bottom: 90%;
+        font-size: 3em;
+    }
+    
+    .historiaSN1Item2{
+        position: absolute;
+        left: 0%;
+        bottom: 40%;
+    }
+    
+    .historiaSN1Item3{
+        position: absolute; 
+        right: 30%;
+        bottom: 30%; 
+        width: 500px; 
+        height: 700px;
+        z-index: 10;
+    }
+    
+    .historiaSN1Item4{
+        position: absolute;
+        left: 60%;
+        bottom: 0%;
+        z-index: 0;
+    }
+    
+    .imgCeles1{
+        height: 500px;
+        position: absolute;
+    }
+    
+    .imgCeles2{
+        position: absolute;
+        height: 700px;
+        clip-path: inset(150px 0 200px 0);
+    }
+
+    .historiaSN2{
+        width: 90%; 
+        height: 1200px;
+        position: relative;
+        left: 5%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .historiaSN2 img{
+        height: 600px;
+        clip-path: inset(100px 0 100px 0);
+    }
+    
+    .historiaSN2 P{
+        font-size: 1.5rem;
+    }
+
+    .cardsStaffContainer{
+        width: 100%;
+        margin-top: 100px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .cardsStaff{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;  
+        margin-top: 6rem;
+    }
+
+}
+
+/* FIN NOSOTROS MOBILE */
