--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -236,6 +236,15 @@
         background-position: center;
     }
 
+    .servicio{
+        margin: 100px auto;
+        height: 95vh;
+        display: flex;
+        background-color: rgb(255, 255, 255);
+        position: relative;
+        top: 50px;
+    }
+
 }
   
   /* FIN MOBILE */
