--- a/src/containers/SobreNosotros/sobrenosotros.css
+++ b/src/containers/SobreNosotros/sobrenosotros.css
@@ -114,7 +114,7 @@
 
 .mudAnimadoNosotros{
     height: 15vh;
-    width: 100%;
+    width: 150%;
 }
 
 .mudAnimadoNosotros p{
@@ -260,6 +260,11 @@
         clip-path: inset(150px 0 200px 0);
     }
 
+    .mudAnimadoNosotros{
+        height: 15vh;
+        width: 200%;
+    }
+
     .historiaSN2{
         width: 90%; 
         height: 95vh;
@@ -376,6 +381,11 @@
         position: absolute;
         height: 700px;
         clip-path: inset(150px 0 200px 0);
+    }
+
+    .mudAnimadoNosotros{
+        height: 15vh;
+        width: 300%;
     }
 
     .historiaSN2{
@@ -510,6 +520,15 @@
         height: 700px;
         clip-path: inset(150px 0 200px 0);
     }
+
+    .mudAnimadoNosotros{
+        width: 300%;
+    }
+
+    .mudAnimadoNosotros p{
+        font-size: 1rem;
+    }
+
 
     .historiaSN2{
         width: 90%; 
