--- a/src/containers/SobreNosotros/cardstaff.css
+++ b/src/containers/SobreNosotros/cardstaff.css
@@ -1,5 +1,5 @@
 .cardsStaffContainer{
-    height: 90vh;
+    height: 1400px;
     font-family: 'Reservation';
     font-size: 1rem;
     font-weight: 500;
@@ -14,23 +14,43 @@
 }
 
 .cardContainer{
-    height: 250px;
-    width: 500px;
-    display: flex;
-    flex-direction: row;
-    border: 2px solid #ffff;
-    background-color: rgb(55, 136, 207);
+    height: 500px;
+    width: 350px;
 }
 
 .cardContainer img{
-    height: 250px;
+    width: 100%;
+    height: 100%;
 }
 
+.cardTextContainer{
+    position: relative;
+    background-color: #000;
+    transform: translateY(-40px);
+}
 
 .cardContainer p:first-child{
     font-size: 2rem;
 }
 
+.cardTextContainer :nth-child(2){
+    opacity: 0;
+}
+
+.cardContainer:hover{
+    transform: translateY(-20px);
+    transition: 1s;
+}
+
+.cardContainer:hover .cardTextContainer{
+    transform: translateY(-100px);
+    transition: 1s;
+}
+
+.cardContainer:hover .cardTextContainer :nth-child(2){
+    opacity: 1;
+    transition: 1s;
+}
 
 
 /* CARDS NOSOTROS DESKTOP CHICO */
