--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -123,6 +123,12 @@
     justify-content: space-evenly;
 }
 
+.infoServicios{
+    font-family: 'Reservation';
+    font-size: 1rem;
+    padding: 2rem;
+}
+
 /* FIN SERVICIO DESKTOP*/
 
 
@@ -212,7 +218,6 @@
 
     .serviciosContainerItem{
         position: relative;
-        
         width: 100%;   
     }
     
