--- a/src/containers/SobreNosotros/sobrenosotros.css
+++ b/src/containers/SobreNosotros/sobrenosotros.css
@@ -429,20 +429,20 @@
 
 /* NOSOTROS MOBILE */
 
-@media all and (max-width: 769px){
+@media all and (max-width: 469px){
 
     .imgFondo1 {
         height: 200px;
         position: absolute;
-        right: 60%;
-        bottom: 10%;
+        right: 10%;
+        bottom: 70%;
     }
 
 
     .imgFondo2 {
-        height: 500px;
+        height: 450px;
         position: absolute;
-        left: 60%;
+        left: 20%;
         bottom: 0%;
     }
     
@@ -453,8 +453,8 @@
     }
 
     .tituloSobreNosotros h1{
-        font-size: 1.3rem;
-        width: 600px;
+        font-size: 1.2rem;
+        width: 300px;
     }
 
     .textosMotivacionalesSNContainer{
@@ -462,8 +462,8 @@
         flex-direction: row;
         align-items: center;
         margin: auto;
-        height: 20vh;
-        width: 80%;
+        height: 40vh;
+        width: 90%;
     }
     
     .textosMotivacionalesSNContainer h1{
@@ -472,35 +472,34 @@
     }
 
     .historiaSN1{
-        height: 1200px;
+        height: 1400px;
         width: 90%;
         position: relative;
     }
     
     .historiaSN1 p{
         font-size: 1rem;
-        padding: 1rem;
     }
     
     .historiaSN1Item1{
         position: absolute;
-        left: 20%;
+        left: 15%;
         bottom: 90%;
         font-size: 3em;
     }
     
     .historiaSN1Item2{
         position: absolute;
-        left: 0%;
-        bottom: 40%;
+        left: -10%;
+        bottom: 55%;
     }
     
     .historiaSN1Item3{
         position: absolute; 
-        right: 30%;
-        bottom: 30%; 
-        width: 500px; 
-        height: 700px;
+        left: 7%;
+        bottom: 10%; 
+        width: 700px; 
+        height: 600px;
         z-index: 10;
     }
     
@@ -523,17 +522,12 @@
     }
 
     .mudAnimadoNosotros{
-        width: 300%;
+       display: none;
     }
-
-    .mudAnimadoNosotros p{
-        font-size: 1rem;
-    }
-
 
     .historiaSN2{
         width: 90%; 
-        height: 1200px;
+        height: 1000px;
         position: relative;
         left: 5%;
         display: flex;
@@ -546,7 +540,15 @@
     }
     
     .historiaSN2 P{
-        font-size: 1.5rem;
+        font-size: 1rem;
+        position: absolute;
+    }
+
+    .historiaSN2 p:nth-child(2){
+        top: 50%;
+    }
+    .historiaSN2 p:nth-child(3){
+        top: 75%;
     }
 
     .cardsStaffContainer{
