--- a/src/containers/SobreNosotros/cardstaff.css
+++ b/src/containers/SobreNosotros/cardstaff.css
@@ -121,42 +121,72 @@
 
 /* FIN CARDS NOSOTROS TABLET */
 
-/* CARDS NOSOTROS TABLET */
-@media all and (max-width: 769px){
-
-    .cardsStaffContainer{
-        height: 1800px;
-        margin-top: 100px;
-    }
+/* CARDS NOSOTROS MOBILE */
+@media all and (max-width: 469px){
 
     .cardsStaff{
-        height: 800px;
-        margin-top: 50px;
-        justify-content: center;
+        height: 1700px;
     }
 
+    .cardsStaffContainer{
+        height: 330vh;
+        font-family: 'Reservation';
+        font-size: 1rem;
+        font-weight: 500;
+        color: #ffff;
+        justify-content: flex-start;
+    }
+
+    .cardsStaffContainer:nth-child(3){
+        position: absolute;
+        top: 90%;
+    }
+    
     .cardsStaffContainer h1{
+        font-family: 'Reservation';
         font-size: 2rem;
         font-weight: 500;
+        color: #ffff;
     }
-
+    
     .cardContainer{
-        height: 250px;
-        width: 400px;
-        display: flex;
-        flex-direction: row;
-        border: 2px solid #ffff;
-        background-color: rgb(55, 136, 207);
+        margin-top: 100px;
+        height: 400px;
+        width: 350px;
     }
-
+    
     .cardContainer img{
-        height: 250px;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .cardTextContainer{
+        position: absolute;
+        background-color: #000;
+        left:-1%;
+        width: 351px;
     }
     
     .cardContainer p:first-child{
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
     
+    .cardTextContainer :nth-child(2){
+        opacity: 1;
+    }
+
+    .cardContainer:hover{
+        transform: none;
+    }
+    
+    .cardContainer:hover .cardTextContainer{
+        transform: none;
+    }
+    
+    .cardContainer:hover .cardTextContainer :nth-child(2){
+        transform: none;
+        opacity: 1;
+    }
 }
 
-/* FIN CARDS NOSOTROS TABLET */
+/* FIN CARDS NOSOTROS MOBILE */
