--- a/src/containers/SobreNosotros/cardstaff.css
+++ b/src/containers/SobreNosotros/cardstaff.css
@@ -159,6 +159,11 @@
         width: 100%;
         height: 100%;
     }
+
+    .cardContainer:nth-child(3){
+        position: absolute;
+        top: 20%;
+    }
     
     .cardTextContainer{
         position: absolute;
@@ -166,7 +171,6 @@
         left:-1%;
         width: 351px;
     }
-    
     .cardContainer p:first-child{
         font-size: 2rem;
     }
