--- a/src/containers/SobreNosotros/sobrenosotros.css
+++ b/src/containers/SobreNosotros/sobrenosotros.css
@@ -419,7 +419,6 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        flex-wrap: wrap;  
         margin-top: 6rem;
     }
 
@@ -552,11 +551,16 @@
     }
 
     .cardsStaffContainer{
+        width: 100%;
+        margin-top: 100px;
+        height: 1700px;
         position: relative;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
     }
+
+
+    
 
 }
 
