--- a/src/containers/Carreras/Academia/infoAcademia/infoAcademia.css
+++ b/src/containers/Carreras/Academia/infoAcademia/infoAcademia.css
@@ -1,12 +1,66 @@
 .seccionUno{
     height: 90vh;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     font-family: 'Reservation';
+    overflow-y: hidden;
+}
+
+.headerAcademy{
+    display: flex;
+    flex-direction: row;
+    height: 70vh;
+}
+
+.headerImg{
+    width: 50%;
 }
 
 .seccionUno h1{
     box-sizing: border-box;
     padding: 20px;
+    color: rgb(0, 0, 0);
+}
+
+.tituloCarrera{
+    background-size: cover;
+    opacity: .6;
+}
+
+.listaAcademy{
+    list-style-image: url('https://i.postimg.cc/Vv4K8x3q/icons8-whatsapp-30.png');
+}
+
+.infoAcademy{
+    margin-top: 100px;
+}
+.infoAcademyItems{
+    margin-top: 30px;
+    font-size: 1.3rem;
+    font-weight: 700;
+    margin-left: 20%;
+}
+
+.seccionDos{
+    height: 90vh;
+    font-family: 'Reservation';
+}
+
+.tituloTexto{
+    margin-top: 5rem;
+    font-size: 1.5rem;
+    display: block;
+    padding: 5rem;
+}
+
+.banners{
+    display: flex;
+    justify-content: space-around;
+}
+
+.bannerInfo{
+    width: 30%;
+    margin-top: 7rem;
+}
+
+.banners li {
+    list-style: none;
 }
