--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -132,11 +132,19 @@
     margin: 10px;
 }
 
+.servicioBotones button:hover{
+    color: #fff;
+    background-color: #000;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    margin: 10px;
+}
+
 .infoServicios{
     font-family: 'Reservation';
     font-size: 1rem;
     padding: 2rem;
-    height: 700px;
+    height: 650px;
     overflow-y: auto;
 }
 
@@ -274,12 +282,40 @@
 
     .servicio{
         margin: 100px auto;
+        width: 100%     ;
         height: 95vh;
         display: flex;
+        flex-wrap: wrap;
         background-color: rgb(255, 255, 255);
         position: relative;
         top: 50px;
     }
+
+    .servicioCarousel img{
+        height: 200px;   
+    }
+
+    .servicioCarousel{
+        width: 100%;
+    }
+
+    .carousel{
+        width: 425px;
+    }
+
+    .servicioInfo{
+        width: 100%;
+        font-family: 'Reservation';
+    }
+
+    .infoServicios{
+        padding: 20px;
+        font-size: 1rem;    
+        height: 400px;
+        overflow-y: auto;
+    }
+    
+
 
 }
   
