--- a/src/containers/Carreras/Academia/academia.css
+++ b/src/containers/Carreras/Academia/academia.css
@@ -50,52 +50,53 @@
     font-size: 3rem;
 }
 
-.infoAcademia{
-    display: flex;
-    flex-direction: row;
-}
-
-.seccionAcademia{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin-left: 5%;
-    height: 600px;
-}
-
-.seccionAcademia p{
-    margin: auto;
-    margin-top: 4rem;
-}
-
-.seccionAcademia button{
-    margin-top: 6rem;
-    width: 400px;
-    cursor: pointer;
+.academia{
+    margin: 100px auto;
+    width: 100%;
+    height: 95vh;
     background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    border-radius: 4px;
-    font-family: 'Reservation';
-    margin-left: 40px;
-}
-
-.infoAcademia img{
-    height: 600px;
-    width: 40%;
-    object-fit: cover;
-    margin-top: 4rem;
-}
-
-.infoAcademia p{
-    width: 60%;
-    font-family: 'Reservation';
-    color: #ffff;
-    font-size: 2rem;
+    display: flex;
+    position: relative;
+    top: 50px;
 }
 
 .academiaInfo{
-    background-color: #ffff;  
+    width: 100%;
+    font-family: 'Reservation';
 }
+
+.academiaBotones{
+    margin-top: 1rem;
+    display: flex;
+    flex: 1;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.academiaBotones button{
+    color: #fff;
+    background-color: #000;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+.academiaBotones button:hover{
+    opacity: .4;
+}
+
+.academiaInfo{
+    font-family: 'Reservation';
+    font-size: 1rem;
+    padding: 2rem;
+    height: 650px;
+    overflow-y: auto;
+}
+
+
+
+
+
 
 
 
