--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -133,11 +133,7 @@
 }
 
 .servicioBotones button:hover{
-    color: #fff;
-    background-color: #000;
-    border: 1px solid #fff;
-    border-radius: 5px;
-    margin: 10px;
+    opacity: .4;
 }
 
 .infoServicios{
