css de academia actualizado

--- a/src/containers/Carreras/Academia/academia.css
+++ b/src/containers/Carreras/Academia/academia.css
@@ -1,4 +1,4 @@
-/* SERVICIO DESKTOP */
+/* ACADEMIA DESKTOP */
 
 .academiaContainer{
     margin-top: 100px;
@@ -95,27 +95,85 @@
     overflow-y: auto;
 }
 
-/* FIN SERVICIO DESKTOP*/
+/* FIN ACADEMIA DESKTOP*/
 
-/* SERVICIO CHICO */
+/* ACADEMIA CHICO */
 
 @media all and (max-width: 1600px){
-  
-    .serviciosContainer{
-        margin-top: 100px;
-        height: 85vh;
-    }
-
-    .Titulo{
-        font-size: 3.5rem;
+    
+    .academia{
+        margin: 0px auto;
+        background-color: rgb(255, 255, 255);
+        display: flex;
         position: relative;
+        top: 50px;
     }
 
 }
   
-  /* FIN SERVICIO CHICO */
+  /* FIN ACADEMIA CHICO */
 
-  /* SERVICIO MOBILE */
+   /* ACADEMIA TABLET */
+
+   @media all and (max-width: 769px){
+  
+    .serviciosContainer{
+        margin-top: 140px;
+        height: 100vh;
+    }
+
+.serviciosContainerItem{
+    position: relative;
+    height: 900px;
+    width: 100%;   
+}
+
+.serviciosContainerItem1{
+    position: absolute;
+    top: 0; 
+    right: 25%;
+    height: 200px;
+    width: 400px;
+    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
+    background-position: center;
+}
+
+.serviciosContainerItem2{
+    position: absolute;
+    right: 25%;
+    top: 25%;
+    height: 200px;
+    width: 400px;
+    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
+    background-position: center;
+}
+
+.serviciosContainerItem3{
+    position: absolute;
+    left: 23%;
+    top: 50%;
+    height: 200px;
+    width: 400px;
+    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
+    background-position: center;
+}
+
+.serviciosContainerItem4{
+    position: absolute;
+    left: 23%;
+    top: 75%;
+    height: 200px;
+    width: 400px;
+    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
+    background-position: center;
+}
+
+}
+
+/* FIN TABLET */
+
+
+  /* ACADEMIA MOBILE */
 
   @media all and (max-width: 469px){
   
