--- a/src/containers/Carreras/Academia/academia.css
+++ b/src/containers/Carreras/Academia/academia.css
@@ -115,62 +115,20 @@
 
    /* ACADEMIA TABLET */
 
-   @media all and (max-width: 769px){
-  
-    .serviciosContainer{
-        margin-top: 140px;
-        height: 100vh;
+@media all and (max-width: 769px){
+    
+    .academia{
+        display: flex;
+        flex-direction: column;
+        height: 150vh;
     }
 
-.serviciosContainerItem{
-    position: relative;
-    height: 900px;
-    width: 100%;   
+    .academiaCarousel img{
+        height: 300px;
+        width: 100%;
+    }
 }
-
-.serviciosContainerItem1{
-    position: absolute;
-    top: 0; 
-    right: 25%;
-    height: 200px;
-    width: 400px;
-    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
-    background-position: center;
-}
-
-.serviciosContainerItem2{
-    position: absolute;
-    right: 25%;
-    top: 25%;
-    height: 200px;
-    width: 400px;
-    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
-    background-position: center;
-}
-
-.serviciosContainerItem3{
-    position: absolute;
-    left: 23%;
-    top: 50%;
-    height: 200px;
-    width: 400px;
-    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
-    background-position: center;
-}
-
-.serviciosContainerItem4{
-    position: absolute;
-    left: 23%;
-    top: 75%;
-    height: 200px;
-    width: 400px;
-    background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
-    background-position: center;
-}
-
-}
-
-/* FIN TABLET */
+    /* FIN TABLET */
 
 
   /* ACADEMIA MOBILE */
