--- a/src/containers/Inicio/inicio.css
+++ b/src/containers/Inicio/inicio.css
@@ -187,6 +187,15 @@
     object-fit: cover;
   }
 
+  .contactoInicioInfo p{
+    left: 35%;
+  }
+
+  .botonesContacto{
+    left: 35%;
+    top: 70%;
+  }
+
 
 }
 
@@ -253,6 +262,12 @@
 .botonesContactoImg{
   height: 40px;
   cursor: pointer;
+}
+
+.botonInicio{
+  font-size: 1rem;
+  height: 70px;
+  width: 300px;
 }
 
 }
