--- a/src/components/GaleriaTrabajos/arrayFotos.css
+++ b/src/components/GaleriaTrabajos/arrayFotos.css
@@ -21,7 +21,7 @@
     flex-wrap: wrap;
     justify-content: center;
     width: calc(600px * 18);
-    animation: scroll 40s linear infinite
+    animation: scroll 25s linear infinite;
 }
 
 
