--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
 /* width */
 ::-webkit-scrollbar {
   width: 15px;
+  background-color: #000;
 }
 
 /* Track */
@@ -41,7 +42,7 @@
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(0, 0, 0); 
+  background: rgb(255, 250, 250); 
   border-radius: 10px;
 
 }
@@ -49,6 +50,10 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgba(26, 24, 24, 10); 
+}
+
+hr{
+  color: #fff;
 }
 
 
