--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -225,7 +225,8 @@
 
     .serviciosContainerItem{
         position: relative;
-        width: 100%;   
+        width: 90%;
+        height: 1200px;   
     }
     
     .serviciosContainerItem1{
@@ -313,8 +314,6 @@
         height: 400px;
         overflow-y: auto;
     }
-    
-
 
 }
   
