--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: row;
     flex: 1;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     height: 100px;
     font-family: 'Reservation Bold';
@@ -28,12 +28,13 @@
   }
 
   .navItemsContainer{
-    width: 60%;
+    width: 80%; 
   }
 
   .navItem{
     color: #ffff;
     text-decoration: none;
+    margin-left: 3rem;
   }
 
   .navItem:hover{
@@ -54,6 +55,7 @@
   
   .dropDownBtn{
     cursor: pointer;
+    margin-left: 3rem;
   } 
 
   .dropDownBtn a{
