--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -132,16 +132,15 @@
     font-family: 'Reservation';
     font-size: 1rem;
     padding: 2rem;
-    height: 650px;
+    height: 530px;
     overflow-y: auto;
 }
 
 .Info{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     line-height: 1.6;
-    height: 900px;
+    overflow: auto;
     text-align: left;
 }
 
