--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -132,7 +132,7 @@
     font-family: 'Reservation';
     font-size: 1rem;
     padding: 2rem;
-    height: 530px;
+    height: 85%;
     overflow-y: auto;
 }
 
