--- a/src/containers/Carreras/Academia/academia.css
+++ b/src/containers/Carreras/Academia/academia.css
@@ -125,7 +125,7 @@
 .informacion{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: left;
 }
 
 /* FIN ACADEMIA DESKTOP*/
