--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -141,10 +141,11 @@
     line-height: 1.6;
     overflow: auto;
     text-align: left;
+    padding: 2rem;
 }
 
 .parrafoServicios{
-    margin-top: 30px;
+    margin-top: 2rem;
 }
 
 
