--- a/src/containers/SobreNosotros/sobrenosotros.css
+++ b/src/containers/SobreNosotros/sobrenosotros.css
@@ -240,7 +240,7 @@
     
     .historiaSN1Item3{
         position: absolute; 
-        left: 35%;
+        left: 50%;
         bottom: 5%;  
     }
     
@@ -280,9 +280,9 @@
     
     .historiaSN2 P{
         padding: 1.5rem;
-        font-size: 2rem;
+        font-size: 1.7rem;
         position: relative;
-        top: 10%;
+        top: 25%;
     }
 }
   
@@ -360,8 +360,8 @@
     .historiaSN1Item3{
         position: absolute; 
         right: 30%;
-        bottom: 30%; 
-        width: 500px; 
+        bottom: 20%; 
+        width: 700px; 
         height: 700px;
         z-index: 10;
     }
@@ -391,20 +391,24 @@
 
     .historiaSN2{
         width: 90%; 
-        height: 1200px;
+        height: 800px;
         position: relative;
         left: 5%;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
     }
     
     .historiaSN2 img{
-        height: 600px;
+        height: 500px;
+        width: 700px;
         clip-path: inset(100px 0 100px 0);
     }
     
     .historiaSN2 P{
         font-size: 1.5rem;
+        position: absolute;
+        top: 60%;
     }
 
     .cardsStaffContainer{
