--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -166,6 +166,9 @@
         position: relative;
     }
 
+    .infoServicios h1{
+        font-size: 2rem;
+    }
 }
   
   /* FIN SERVICIO CHICO */
@@ -175,10 +178,10 @@
 
     @media all and (max-width: 769px){
   
-        .serviciosContainer{
-            margin-top: 140px;
-            height: 100vh;
-        }
+    .serviciosContainer{
+        margin-top: 140px;
+        height: 100vh;
+    }
 
     .serviciosContainerItem{
         position: relative;
@@ -190,7 +193,7 @@
         position: absolute;
         top: 0; 
         right: 25%;
-        height: 200px;
+        height: 100px; 
         width: 400px;
         background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
         background-position: center;
@@ -200,7 +203,7 @@
         position: absolute;
         right: 25%;
         top: 25%;
-        height: 200px;
+        height: 100px; 
         width: 400px;
         background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
         background-position: center;
@@ -210,7 +213,7 @@
         position: absolute;
         left: 23%;
         top: 50%;
-        height: 200px;
+        height: 100px; 
         width: 400px;
         background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
         background-position: center;
@@ -220,11 +223,17 @@
         position: absolute;
         left: 23%;
         top: 75%;
-        height: 200px;
+        height: 100px; 
         width: 400px;
         background-image: url('https://i.postimg.cc/C1pw4dHd/IMG-3807.jpg');
         background-position: center;
     }
+
+    #SeccionServicios{
+        margin-top: 25rem;
+    }
+    
+    /* Ultima modificacion 12/4 */
 
 }
   
@@ -287,7 +296,6 @@
         height: 95vh;
         display: flex;
         flex-wrap: wrap;
-        background-color: rgb(255, 255, 255);
         position: relative;
         top: 50px;
     }
@@ -326,6 +334,12 @@
         height: 400px;
         overflow-y: auto;
     }
+
+    #SeccionServicios{
+        margin-top: 35rem;
+    }
+    
+    /* Ultima modificacion 12/4 */
 
 }
   
