--- a/src/containers/Carreras/Academia/academia.css
+++ b/src/containers/Carreras/Academia/academia.css
@@ -165,7 +165,7 @@
     .headerItemPosition1{
         position: absolute;
         top: 35%;
-        left: 5%;
+        left: 21%;
     }
     
     .headerItemPosition2{
@@ -177,7 +177,7 @@
     .headerItemPosition2{
         position: absolute;
         top: 80%;
-        left: 85%;
+        left: 90%;
     }
     
     .headerItemPosition2 img{
@@ -255,16 +255,17 @@
     
     .headerItem1{
         font-size: 2rem;
+        margin-top: 2rem;
     }
     
     .headerItem2{
         font-size: 1rem;
-        margin-top: 8rem;
+        margin-top: 2rem;
     }
     
     .headerItem3{
         font-size: 1rem;
-        margin-top: 2.2rem;
+        margin-top: 7rem;
     }
     
     .headerItemPosition1{
@@ -276,9 +277,12 @@
     .headerItemPosition2{
         position: absolute;
         top: 85%;
-        left: 70%;
+        left: 75%;
     }
     
+    .headerItemPosition2 img{
+        height: 75px;
+    }
   
 
     .academia{
@@ -286,7 +290,7 @@
         width: 100%     ;
         height: 95vh;
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
         position: relative;
         top: 50px;
     }
