--- a/src/containers/Inicio/inicio.css
+++ b/src/containers/Inicio/inicio.css
@@ -91,7 +91,7 @@
   height: 90vh;
   width: 90%;
   margin: auto;
-  background-image: url('https://i.postimg.cc/TwmB4x4H/foto-academia-1.png');
+  background-image: url('https://i.postimg.cc/bwZPVy7g/6.jpg');
   background-position: center;
   background-repeat: no-repeat;
 }
