cambio de titulo

--- a/src/containers/Carreras/Academia/academia.css
+++ b/src/containers/Carreras/Academia/academia.css
@@ -107,7 +107,7 @@
     padding: 2rem;
 }
 
-.academiaInfoDetalle .botonInscripcion{
+.botonInscripcion{
     font-size: 1.3rem;
     color: #fff;
     background-color: #000;
