--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -70,7 +70,6 @@
     font-family: 'Reservation';
     color: #ffff;
     height: 600px;
-    border-top: 2px solid rgb(255, 255, 255);
   }
   .footerInfo{
     display: flex;
@@ -94,22 +93,31 @@
  /* FOOTER MOBILE */
  @media screen and (max-width: 469px){
 
+  .footerContainer{
+    font-size: 14px;
+  }
+
+  .footerContainer img{
+    height: 20px;
+  }
+  
+  .footerItem p{
+    text-align: left;
+    margin-left: 25px;
+  }
+
+  .tituloF1{
+    margin-left: -40px;
+  }
+
 
   .footerItem2{
-    margin-left: -20px;
-  }
-
-  .footerItem2:first-child{
-    margin-left: -20px;
-  }
-
-  .footerItem p{
-    margin-left: 15px;
+    margin-left: -30px;
   }
 
 
   .footerTitulo2{
-    margin-left: 50px;
+    margin-left: 40px;
   }
  
 }
