--- a/src/containers/Inicio/inicio.css
+++ b/src/containers/Inicio/inicio.css
@@ -204,19 +204,14 @@
 
 
 @media all and (max-width: 769px){
-  
-  .videoBody video{
-    margin-top: 100px;
-    height: 1200px;
-  }
 
   .videoBody.videoBodyItem{
     height: 100%;
   }
   
   .cardsBodyContainer{
-    margin-top: 500px;
-    height: 1000px;
+    margin-top: 300px;
+    height: 600px;
   }
 
  .cardsBody{
@@ -268,6 +263,7 @@
   width: 300px;
 }
 
+
 }
 
 
@@ -285,7 +281,7 @@
   
   .cardsBodyContainer{
     margin-top: 150px;
-    height: 1200px;
+    height: 800px;
   }
 
  .cardsBody{
@@ -310,6 +306,7 @@
   width: 90%;
   display: flex;
   flex-direction: column;
+  height: 600px;
 }
 
 .aboutIndex img{
@@ -321,7 +318,7 @@
 
 .aboutIndexInfo{
   width: 100%;
-  height: 600px;
+  height: 400px;
   font-family: 'Reservation';
   color: #ffff;
   display: flex;
@@ -336,7 +333,7 @@
 }
 
 .contactoInicioContainer{
-  height: 800px;
+  height: 400px;
 }
 
 .contactoInicioInfo p{
@@ -344,7 +341,7 @@
   font-size: 2rem;
   color: #ffff;
   position: absolute;
-  bottom: 70%;
+  top: 5%;
   left: 20%;
 }
 
@@ -353,14 +350,21 @@
   flex-direction: row;
   justify-content: space-evenly;
   position: absolute;
-  left: 10%;
-  top: 60%;
+  left: 7%;
+  top: 40%;
 }
 
 .botonesContactoImg{
   height: 40px;
   cursor: pointer;
 }
+
+.contactoInicioContainer{
+  margin: auto;
+  background-image: url('https://i.postimg.cc/bwZPVy7g/6.jpg');
+  background-size: contain;
+}
+
 
 }
 
