--- a/src/containers/Carreras/Academia/academia.css
+++ b/src/containers/Carreras/Academia/academia.css
@@ -284,11 +284,10 @@
         height: 75px;
     }
   
-
     .academia{
-        margin: 100px auto;
-        width: 100%     ;
-        height: 95vh;
+        height: 850px;
+        margin: 50px auto;
+        width: 100%;
         display: flex;
         flex-direction: column;
         position: relative;
@@ -296,18 +295,18 @@
     }
 
     .academiaCarousel img{
-        height: 200px;
+        height: 100px;
         width: 100%;   
     }
 
     .academiaCarousel{
         width: 100%;
-        height: 200px;
+        height: 100px;
     }
 
     .academiaInfo{
         margin-top: 0rem;
-        height: 600px;
+        height: 750px;
         width: 100%;
         overflow-y: auto;
     }
@@ -315,13 +314,19 @@
     .academiaBotones{
         margin-top: 0rem;
         display: flex;
-        flex: 2;
         flex-wrap: wrap;
-        justify-content: space-evenly;    
+        justify-content: space-evenly; 
+        width: 100%;   
+    }
+    .academiaBotones button{
+        height: 50px;
+        width: 120px;
+        display: flex;
     }
 
+
     .infoAcademia{
-        padding: 20px;
+        padding: 0px;
         font-size: 1rem;    
         height: 400px;
         overflow-y: auto;
@@ -329,8 +334,19 @@
 
     .academiaInfoDetalle{
         font-family: 'Reservation';
-        margin-top: 1rem;
+        margin-top: 2rem;
         padding: 0rem;
+    }
+
+    .botonInscripcion{
+        font-size: .8rem;
+        color: #fff;
+        background-color: #000;
+        border: 1px solid #fff;
+        height: 50px;
+        width: 250px;
+        border-radius: 5px;
+        margin: 15px 10px 0px 0px;
     }
 }
   
