--- a/src/containers/Servicios/servicios.css
+++ b/src/containers/Servicios/servicios.css
@@ -263,7 +263,7 @@
     .serviciosContainerItem{
         position: relative;
         width: 90%;
-        height: 1200px;   
+        height: 1000px;   
     }
     
     .serviciosContainerItem1{
@@ -334,7 +334,7 @@
     }
 
     .servicioInfo{
-        margin-top: 0rem;
+        margin-top: 0px;
         height: 500px;
         width: 100%;
         overflow-y: auto;
@@ -348,15 +348,24 @@
         justify-content: space-evenly;    
     }
 
+    .servicioBotones button{
+        width: 120px;    
+    }
+
     .infoServicios{
-        padding: 20px;
-        font-size: 1rem;    
-        height: 400px;
+        padding: 0px;
+        font-size: .9rem;    
+        height: 600px;
         overflow-y: auto;
     }
+ 
 
     #SeccionServicios{
         margin-top: 35rem;
+    }
+
+    .titulo{
+        font-size: 1.7rem;
     }
     
     /* Ultima modificacion 12/4 */
